# empo_2

./: CLAUDE.md  README.md  informal_test.py  main.py  project_log.md  pyproject.toml  scratchpad.ipynb  something_wrong.ipynb  somethings_wrong.py
src/grid_world/: __init__.py  env.py  solvino.py
src/world_model/: example_env.py  grid_world.py  grid_world_core.py  grid_world_env.py  solver.py  world_model.py
tests/: test_solvino.py
