[project]
name = "empo-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.3.0",
    "pettingzoo>=1.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pykernel>=0.1.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_world", "src/world_model"]
